Fix search box overflow and btn location
Closes #866,

--- a/app/assets/stylesheets/directory/base.css.scss
+++ b/app/assets/stylesheets/directory/base.css.scss
@@ -1246,6 +1246,7 @@ form.with-tags {
   display: block;
   height: 29px;
   width: 29px;
+  padding-top: 2em;
 }
 
 .lower-right {
